# ping-vest

./: .gitignore  LICENCE  README.md  api_key.txt  app.py  app_config.json  cli.py  detect.py  pyproject.toml
inovest/: pipe.py
inovest/utils/: utils.py
pingvest/: assets.py  detector.py  pipe.py  utils.py
pingvest/api/: assets.py
pingvest/detection/: detector.py  response.py  stats.py
pingvest/detection/strategy/: __init__.py  hit.py  peakdip.py  trend.py
pingvest/utils/: helpers.py  stats.py
tests/: test_api_assets.py  test_detection.py  test_stats.py
